# DeskHive

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
deskhive_server/: __init__.py  __main__.py  database.py  main.py  models.py
deskhive_server/api/: groups.py  sync.py  todos.py  ws.py
deskhive_server/static/: index.html
deskhive_server/static/assets/: index-B8HxVjZ9.css  index-DVwmX2w2.js  index-Dfe3JUxG.css  index-DoBuqY6R.js  index-DuO5UDFi.js
public/: styles.css
src/: App.vue  Settings.vue  sync.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/data/: app_settings.rs  mod.rs  todo_data.rs  window_position.rs
src-tauri/src/models/: settings.rs  todo.rs
src-tauri/src/notification/: mod.rs
src-tauri/src/system/: tray.rs
src-tauri/src/window/: click_through.rs  management.rs  mod.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.vue  Settings.vue  api.ts  main.ts  router.ts  sync.ts  types.ts  ws.ts
web/src/components/: AddTask.vue  AddTaskMenu.vue  AllCompletedState.vue  ContextMenu.vue  DeadlineDialog.vue  EditTaskDialog.vue  EmptyState.vue  GroupContextMenu.vue  GroupNameDialog.vue  TimelineView.vue  Toast.vue  TodoGroup.vue  TodoItem.vue  TodoList.vue  Tooltip.vue
